# tcc-markov-chain

./: README.md  basics.ipynb  hard_disck_periodic.ipynb  makefile  pyproject.toml  test.ipynb
tcc_markov_chain/: base_simulation.py  hard_disc.ipynb  hard_disck_periodic.ipynb  hard_disck_walls.ipynb  simulation.py  simulations.py  test.ipynb  with_walls.py
tcc_markov_chain/base/: simulations.py  systems.py
tcc_markov_chain/legacy/newtonian/: simulations.py  systems.py
tcc_markov_chain/methods/monte_carlo/: simulations.py  systems.py
tcc_markov_chain/observables/: hard_disk.py
tcc_markov_chain/systems/: __init__.py  base.py  calculations.py  hard_disk.py  harddisk.py
tcc_markov_chain/temp/: animation.py
tcc_markov_chain/utils/: distances.py  logging.py
